@@ -13,7 +13,7 @@ class SchemaOrder(unittest.TestCase):
         shutil.rmtree(self.tempdir)
 
     def test_schema_ordering_items(self):
-        items = [('title', 'str'), ('date', 'date')]
+        items = [('title', 'str:80'), ('date', 'date')]
         with fiona.open(os.path.join(self.tempdir, 'test_schema.shp'), 'w',
                 driver="ESRI Shapefile",
                 schema={
@@ -101,26 +101,26 @@ class ShapefileSchema(unittest.TestCase):
         with fiona.open(os.path.join(self.tempdir, 'test_schema.shp')) as c:
             self.assertEqual(
                 list(c.schema['properties'].items()), 
-                sorted([('AWATER10', 'float'), 
-                 ('CLASSFP10', 'str'), 
-                 ('ZipCodeTyp', 'str'), 
-                 ('EstimatedP', 'float'), 
-                 ('LocationTy', 'str'), 
-                 ('ALAND10', 'float'), 
-                 ('INTPTLAT10', 'str'), 
-                 ('FUNCSTAT10', 'str'), 
-                 ('Long', 'float'), 
-                 ('City', 'str'), 
-                 ('TaxReturns', 'float'), 
-                 ('State', 'str'), 
-                 ('Location', 'str'), 
-                 ('GSrchCnt', 'float'), 
-                 ('TotalWages', 'float'), 
-                 ('Lat', 'float'), 
-                 ('MTFCC10', 'str'), 
-                 ('INTPTLON10', 'str'), 
-                 ('GEOID10', 'str'), 
-                 ('Decommisio', 'str')]) )
+                sorted([('AWATER10', 'float:24.15'), 
+                 ('CLASSFP10', 'str:80'), 
+                 ('ZipCodeTyp', 'str:80'), 
+                 ('EstimatedP', 'float:24.15'), 
+                 ('LocationTy', 'str:80'), 
+                 ('ALAND10', 'float:24.15'), 
+                 ('INTPTLAT10', 'str:80'), 
+                 ('FUNCSTAT10', 'str:80'), 
+                 ('Long', 'float:24.15'), 
+                 ('City', 'str:80'), 
+                 ('TaxReturns', 'float:24.15'), 
+                 ('State', 'str:80'), 
+                 ('Location', 'str:80'), 
+                 ('GSrchCnt', 'float:24.15'), 
+                 ('TotalWages', 'float:24.15'), 
+                 ('Lat', 'float:24.15'), 
+                 ('MTFCC10', 'str:80'), 
+                 ('INTPTLON10', 'str:80'), 
+                 ('GEOID10', 'str:80'), 
+                 ('Decommisio', 'str:80')]) )
             f = next(c)
             self.assertEqual(f['properties']['EstimatedP'], 27773.0)
 
